Add _hyperscript attribute

--- a/.ghc.environment.x86_64-linux-8.6.5
+++ b/.ghc.environment.x86_64-linux-8.6.5
@@ -35,13 +35,14 @@ package-id mtl-2.2.2
 package-id transformers-0.5.6.2
 package-id transformers-compat-0.6.6-5c2fbe0390531b42c809368f60d2a3f67533b5c4b076c728ace7237f15670b47
 package-id unordered-containers-0.2.16.0-84c4651dac8c2567a477529053b4626120e5eb0d26317fd5c0ccc8937e53e0fc
-package-id lucid-htmx-0.1.0.4-f10fbe92f98af5f002e72d5bda760f71849e6fe23518aa724d68669240ec91b5
-package-id servant-0.18.3-d628265de1c92c1718f02a963b121e9ad7ccb7d8d1f655d252dabf12e83876f6
+package-id lucid-htmx-0.1.0.4-df2fcad4e004c6b53ccb0ab4331211265ca2bc70ec5b2a14f8d12591b1f80b97
+package-id servant-0.18.3-2642d87e18fc46341b8225fa5f527b19a689e377e23eb7f86e01caf8b43c3c60
 package-id QuickCheck-2.14.2-c7a0169fc7a6de5b12b02a6a0b5dd7a29af4ac9e8cec47b132a4ac28eba51422
 package-id random-1.2.1-d6e065809f4766c9fe07e4e79441d59dcc1314f981f4f64060cfc731e3f076d1
 package-id splitmix-0.1.0.4-c1c994fcde15269949f0d516d3ef28604de875c3f344accd062c226556202a5a
-package-id aeson-1.4.1.0-719334e6d6bb186df5726b9d839ccef4939745b66b61160ff7bc7f82c7846257
-package-id attoparsec-0.14.3-fa14969f9f7b55c8429cef0b8e50623181f84c8614d5af917d0cca9fe8a913a0
+package-id aeson-1.4.1.0-463e571fc12bf3ffce21a8e548449e996ca3f0e8a6d5794c08af093929f5bdab
+package-id attoparsec-0.14.4-e09d13867104706b252d3d2a0bee6cd9ff31ec8f91747529f1d0db053f3fe958
+package-id attoparsec-0.14.4-9d55654fcfd51f2a8563e57bc1322052cb9c968dcc758b974e743b93f75ac96f
 package-id scientific-0.3.6.2-789c2accf87cd8d1913c021db5f68cb78073b03a4e750301fce21afd7bd54fe6
 package-id integer-logarithms-1.0.3.1-7ca169cd5c732ac8416c9adcda2dc70625561d872ab125774a0238beb3a1764a
 package-id primitive-0.6.4.0-40db89a8704ff4cbea96e899154d444bba365eb58145d721e8b7b7b179e6c39a
@@ -57,8 +58,8 @@ package-id comonad-5.0.8-cc16a1016f65d8e6e579e78ca2a25684c53e6629bfff20e573478a3
 package-id distributive-0.6.2.1-3ef7d08e37ca9f2b543853aed0212d0e31564af3924ff7ba65afb409762b3d78
 package-id indexed-traversable-0.1.2-eace64dd74f538ba2bdc445d289d87e28ec3e56f64fb75515102e6a6ce6833b6
 package-id case-insensitive-1.2.1.0-df0e359fc995735715f02bff3daf0d8afd97259c9e97c8ce25da95fdb54af0c9
-package-id http-api-data-0.4.3-efd79ef22e817ffb35e46daa7385f648c4cbf62a62cd8f220f05539ebea908c7
-package-id attoparsec-iso8601-1.0.2.1-b22f7639f1e67c77497317571ea69cc2be6a1a2cb09ce0c9b47c43f8beeeed31
+package-id http-api-data-0.4.3-1ae5850bedc580c779161b1f4412fa02cf82bec61d9a56a8b27e5797900db788
+package-id attoparsec-iso8601-1.0.2.1-273101bfedf1a12195dd81ed9604c5dd672ef01a588e46407a758580b4b716f2
 package-id base-compat-batteries-0.10.5-af6f73a3742e160e62fbfebde0663373ca5b9661ab86a6313dbc8930b9e7bc9d
 package-id time-compat-1.9.6.1-b1eed3b18f3e35ecea69fabe7917f4dacb08d9e6db9d1c9da0a12eaf09f4a3ce
 package-id cookie-0.4.5-1befd597ba538d7169123ea0b52910c47194bea3695976af204a1e06d62af2a0
@@ -77,5 +78,11 @@ package-id sop-core-0.5.0.2-52fbd6f6b15d3b9af14c6f13e0ae06b727f121c8520c1f8792f4
 package-id string-conversions-0.4.0.1-8b8e7378ee8f8aefcd05a8f9d267e2c9c7df25f0ac705c2c4b7412d30ececfce
 package-id vault-0.3.1.5-c8d127413b9f734bc9d1a09712decb6fe34013f4d762e1d0f32061ca4c7a3aae
 package-id tagsoup-0.14.8-61e6655123804c535d1e2e496c5f2af46599c0ffcd6dde0a339045a504aabd39
+package-id ansi-terminal-0.11.1-4afb52e883c7d1d9279d75ac44fb6ccb7d51be920527fddcb3ccad0ea54a2410
+package-id colour-2.3.5-7cc4ff67f62b39f31668a50554a26aea929c746c154f83be89c7eaed763b8428
+package-id optparse-applicative-0.16.1.0-a93759346e38b8329099251b3a52c79c98ff90927d0463e6eb6557be707535b1
+package-id ansi-wl-pprint-0.6.9-3f8629568b2ff4e3472cd018c482a8fe8a08ad4aabc92b341f089734fd1d2711
 package-id process-1.6.5.0
 package-id stm-2.5.0.0
+package-id exceptions-0.10.4-2e686fdff7a6bdbd62e24641169087c094e991de8ab3f6381a859306fd258e32
+package-id unliftio-core-0.2.0.1-2508a890d12eafb8f47f24cabe44202bd7d562a64815930cd36681e67e86553b
